--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,24 @@
+
 :root {
     --color-texto: black;
     --color-fondo: white;
     --color-aux: gray;
 }
 
-
-
 * {
 
     box-sizing: border-box;
 }
 
-
 html {
     scroll-behavior: smooth;
 }
 
-
-
-
 body {
-
 
     font-family: 'Lora', serif;
 
 }
-
-
-
 
 header {
 
@@ -35,38 +26,27 @@ header {
     font-family: 'Open Sans', sans-serif;
 }
 
-
-
-body>header>nav {
+body > header > nav {
 
     position: fixed;
     top: 0rem;
-    left:0rem;
+    left: 0rem;
     background: black;
     height: 100vh;
     width: 200px;
 
-
 }
-
-
 
 .wrapper-prueba {
 
     margin-left: 200px;
 
-
-
 }
 
-section>header>h1{
-
+section > header > h1 {
 
     font-size: 5rem;
 }
-
-
-
 
 header {
 
@@ -75,23 +55,16 @@ header {
 
 }
 
-
-
-
-
 /*Resetear menu*/
 nav ul {
 
-    list-style:none;
+    list-style: none;
 }
-
 
 nav a {
     color: inherit;
     text-decoration: none;
 }
-
-
 
 .active {
 
@@ -100,41 +73,22 @@ nav a {
 
 }
 
-
-
 section header {
 
     height: 100vh;
 
 }
 
-
-
 .header-home {
 
     background-image: url('../assets/bg-1.jpg');
 }
 
-
-
-
 .header-quiensoy
-
-
-
 .header-estudios
-
-
 .header-experiencia
-
-
 .header-sobremi
-
-
 .header-contacto
-
-
-
 .wrapper-home {
 
     width: 60%;
@@ -142,60 +96,64 @@ section header {
     margin-right: auto;
 }
 
-
 /* animacion sobre el menu*/
-
-
 @keyframes menu {
 
     0% {
 
-    background: #f00;
-    font-size: 2rem;
+        background: #f00;
+        font-size: 2rem;
 
     }
 
     50% {
 
-    background: #ffd630;
+        background: #ffd630;
         font-size: 4rem;
 
-}
+    }
 
 }
 
-
-.menu1>ul>li>a:hover {
+.menu1 > ul > li > a:hover {
     animation-name: menu;
     animation-duration: 2s;
 }
 
+@media screen and (min-width: 480px) {
 
 
+    body {
 
+        background-color : aqua;
 
-/* media queries */
+    }
 
-
-@media screen and (max-width: 992px) {
-
-    section>header>h1 {
-
-    background-color: blue;
-}
 
 }
 
+@media screen and (max-width: 768px) {
 
-
-
-@media screen and (max-width: 600px) {
-
-    section>header>h1 {
+    section > header > h1 {
 
         background: olive;
     }
 }
+
+
+
+
+@media screen and (max-width: 1024px) {
+
+    section > header > h1 {
+
+        background: olive;
+    }
+}
+
+
+
+
 
 
 
